Bug 555845 - Improve legibility of the menu bar on glass. r=gavin
UltraBlame original commit: 5c76373229042e3f81edc83b9db569052a4d0271

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -538,6 +538,54 @@ dialog
 ;
 }
 #
+main
+-
+menubar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+:
+not
+(
+:
+-
+moz
+-
+window
+-
+inactive
+)
+{
+background
+-
+color
+:
+rgba
+(
+255
+255
+255
+.
+5
+)
+;
+-
+moz
+-
+border
+-
+radius
+:
+4px
+;
+}
+#
 urlbar
 .
 searchbar
